# huntrs

./: Cargo.toml  README.md
src/: favi.rs  main.rs  pdns.rs  utils.rs
