[package]
name = "huntrs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.13", features = ["derive", "env"] }
ipnetwork = "0.20.0"
rand = "0.8.5"
reqwest = { version = "0.12.5", features = ["json"] }
scraper = "0.19.1"
serde_json = "1.0.122"
tokio = { version = "1.39.2", features = ["full"] }
clap_derive = "4.5.13"
trust-dns-resolver = { version = "0.23.2" }
futures = "0.3.30"
base64 = "0.22.1"
murmur3 = "0.5.2"
murmurhash3 = "0.0.5"
